Fix T50386: Crash when spawning pie menus

D2455 by @raa, thanks!